--- a/gitlab.yml
+++ b/gitlab.yml
@@ -1,20 +1,7 @@
-gitlabpostgresql:
-  image: sameersbn/postgresql
-  volumes:
-    - /srv/volume/gitlab/postgresql:/var/lib/postgresql
-  env_file: gitlab/postgres.env
-
 gitlab:
-  image: sameersbn/gitlab
+  image: hacsoc/gitlab
   container_name: gitlab
-  links:
-    - gitlabredis:redisio
-    - gitlabpostgresql:postgresql
-  env_file: gitlab/gitlab.env
   volumes:
-    - /srv/volume/gitlab/gitlab:/home/git/data
-
-gitlabredis:
-  image: sameersbn/redis
-  volumes:
-    - /srv/volume/gitlab/redis:/var/lib/redis
+    - /srv/volume/gitlab/config:/etc/gitlab
+    - /srv/volume/gitlab/logs:/var/log/gitlab
+    - /srv/volume/gitlab/data:/var/opt/gitlab
