--- a/slacksoc.yml
+++ b/slacksoc.yml
@@ -1,5 +1,5 @@
 slacksoc:
-  image: hacsoc/slacksoc:hack-cwru
+  image: hacsoc/slacksoc:v0.2.2_2
   container_name: slacksoc
   env_file: slacksoc/slacksoc.env
   restart: "no"
