--- a/swingclub.yml
+++ b/swingclub.yml
@@ -1,3 +1,14 @@
 swingclub:
-  image: matthewbentley/swingclub
   container_name: swingclub
+  image: wordpress
+  links:
+    - swingclubmysql:mysql
+  env_file: swingclub/swingclub.env
+  volumes:
+    - /srv/volume/swingclub/swingclub:/var/www/html
+
+swingclubmysql:
+  image: mariadb
+  env_file: swingclub/swingclubmysql.env
+  volumes:
+    - /srv/volume/swingclub/swingclubmysql:/var/lib/mysql
