--- a/slacksoc/slacksoc.env.example
+++ b/slacksoc/slacksoc.env.example
@@ -1,1 +1,6 @@
-SLACKSOC_TOKEN=$WAG
+SLACK_TOKEN=foo
+HACKCWRU_BOT_TOKEN=bar
+LOVE_API_KEY=baz
+GITHUB_CLIENT_ID=qux
+GITHUB_CLIENT_SECRET=foobar
+GITHUB_ACCESS_TOKEN=barbaz
